<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/back_ground"
    tools:context=".MainActivity">

    <TextView
        android:layout_gravity="center"

        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in_page_title"
        android:textColor="#F6F0F0"
        android:textSize="56dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="34dp"
                android:layout_marginRight="26dp"
                android:layout_marginBottom="28dp"
                android:background="@drawable/edittext_circle"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/im_log_in_username"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:src="@drawable/user2"
                    tools:visibility="visible"/>

                <EditText
                    android:maxLength="16"
                    android:maxLines="1"
                    android:id="@+id/edit_LOGIN_account"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:hint="@string/account_hint"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:layout_marginRight="26dp"
                android:layout_marginBottom="26dp"
                android:background="@drawable/edittext_circle"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/im_log_in_clock"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:src="@drawable/lock" />

                <EditText
                    android:maxLines="1"
                    android:maxLength="18"
                    android:id="@+id/edit_LOGIN_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:hint="@string/password_hint"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/edit_eye"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:src="@drawable/closeeye" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="36dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_Register_intent"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="26dp"
                    android:layout_marginRight="13dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:text="@string/register_button"
                    app:backgroundTint="@color/register_button" />

                <Button
                    android:id="@+id/bt_log_in"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="13dp"
                    android:layout_marginRight="26dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:text="@string/log_in_button"
                    app:backgroundTint="@color/log_in_button" />
            </LinearLayout>

</LinearLayout>
